fix: ui layout for overlapping timeslot

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -341,6 +341,8 @@
   --neutral-border-light: #ebebeb;
   --neutral-white: #ffffff;
 
+  --bluish-grey: #F7F8FA;
+
   --primary-red: #ed1c24;
   --primary-blue: #007acc;
 
@@ -425,7 +427,7 @@
   }
 
   .text-h4 {
-    @apply text-lg font-semibold leading-6 mb-3;
+    @apply text-lg font-semibold leading-6;
   }
 
   .text-h4-700 {
@@ -433,19 +435,19 @@
   }
 
   .text-b16 {
-    @apply text-base font-normal leading-6 mb-4;
+    @apply text-base font-normal leading-6;
   }
 
   .text-b16-500 {
-    @apply text-base font-medium leading-6 mb-4;
+    @apply text-base font-medium leading-6;
   }
 
   .text-b16-600 {
-    @apply text-base font-semibold leading-6 mb-4;
+    @apply text-base font-semibold leading-6;
   }
 
   .text-b16-700 {
-    @apply text-base font-bold leading-6 mb-4;
+    @apply text-base font-bold leading-6;
   }
 
   .text-b14 {
@@ -481,19 +483,19 @@
   }
 
   .text-b12 {
-    @apply text-xs font-normal leading-4 mb-4;
+    @apply text-xs font-normal leading-4;
   }
 
   .text-b12-500 {
-    @apply text-xs font-medium leading-4 mb-4;
+    @apply text-xs font-medium leading-4;
   }
 
   .text-b12-600 {
-    @apply text-xs font-semibold leading-4 mb-4;
+    @apply text-xs font-semibold leading-4;
   }
 
   .text-b12-700 {
-    @apply text-xs font-bold leading-4 mb-4;
+    @apply text-xs font-bold leading-4;
   }
 }
 
